sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:12: error: not found: value echangeCount
        echangeCount += 1
        ^AlgBubbleSort2:16: error: value += is not a member of Int
    i += 1
      ^